# pre-clinical-to-clinical-translation

./: .gitignore  CLAUDE.md  PLAN-phase2.md  PLAN.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: data.yaml  data_15.yaml  model.yaml  training.yaml  training_15.yaml
docs/: 01_data_pipeline.md  02_feature_engineering.md  03_architecture.md  04_training.md  05_evaluation.md
notebooks/: 01_eda.ipynb  02_training_analysis.ipynb  03_evaluation.ipynb  colab_quickstart.ipynb
reports/: baselines.json  blog-01-concept.md  blog-02-results.md  blog-03-validation.md  braf_casestudy.json  braf_coverage.json  braf_vemurafenib.html  celligner_comparison.json  confounder_purity.json  day-01-scaffold.md  day-02-ccle-download.md  day-04-hvg-selection.md  day-05-splits.md  day-06-architecture.md  day-07-training-loop.md  day-08-training-run.md  day-09-training-analysis.md  day-10-gate-evaluation.md  day-11-umap-tfs.md  day-12-app-blog.md  day-13-docs-tests.md  day-14-launch.md  day-15-confidence-intervals.md  day-16-train-only-hvg.md  day-17-real-baselines.md  day-18-fifteen-lineages-setup.md  day-19-fifteen-lineage-eval.md  day-20-purity-confounder.md  day-21-label-shuffle-control.md  day-22-braf-data.md  day-23-vemurafenib-casestudy.md  day-24-gate2-summary.md  day-25-celligner-comparison.md  day-26-drug-transfer-positioning.md  day-27-preprint-blog.md  day-3-tcga-download.md  day9_history.json  drug_transfer_positioning.json  eval_summary.json  eval_summary_15.json  (+15 more)
tests/: conftest.py  test_baselines.py  test_casestudy.py  test_confounders.py  (+11 more)
(+44 files in other folders)
